# kunjdb

./: data.json  pyproject.toml  test.py
tinydb/: database.py  storage.py  table.py
